--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         />
 
     <EditText
-        android:id="@+id/Usernameinput"
+        android:id="@+id/UsernameInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -28,7 +28,7 @@
         android:hint="Please Enter Username"/>
 
     <EditText
-        android:id="@+id/Passwordinput"
+        android:id="@+id/PasswordInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -43,7 +43,7 @@
         android:text="Remember Password!!!" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/SubmitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign In" />
